fix overflow-x

--- a/css/layout.css
+++ b/css/layout.css
@@ -55,7 +55,6 @@ body {
     margin-top: 0;
     padding: 0 .2rem;
     margin: auto;
-    overflow-x: hidden;
 }
 
 p {
